--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,7 @@ select:hover::after{
   color: #23b499;
 }
 .cajaCharacterCard{
+  
 position: absolute;
 top: 200px;
 width: 100%;
@@ -164,6 +165,7 @@ height: 100px;
 	background-color: #A8A878;
 	border: 1px solid #6D6D4E;
   padding: 15px;
+  
 }
 
 .fire {
@@ -280,4 +282,34 @@ height: 100px;
 }
 .leer h3 b{
   color: #6890F0;
+}
+.containar:hover{
+  
+  padding: 5px;
+ 
+}
+.img-detail{
+  background-image: url(./img/img.jpg);
+  width: 100%;
+  height: 100vh;
+  
+}
+.dentro{
+  position: relative;
+ top: 490px;
+ left: 400px;
+ width: 800px;
+ height: auto;
+ 
+}
+.dentro img{
+  position: absolute;
+  bottom: 200px;
+  right: 200px;
+}
+.info-Detail{
+  margin: 40px;
+  margin-top: 100px;
+  color: #0d2e7a;
+  
 }
